tests/functional/lang/eval-fail/foldlStrict-strict-op-application.err.exp
error:
       … while calling the 'foldl'' builtin
         at /pwd/lang/eval-fail/foldlStrict-strict-op-application.nix:2:1:
            1| # Tests that the result of applying op is forced even if the value is never used
            2| builtins.foldl' (_: f: f null) null [
             | ^
            3|   (_: throw "Not the final value, but is still forced!")

       … while calling anonymous lambda
         at /pwd/lang/eval-fail/foldlStrict-strict-op-application.nix:2:21:
            1| # Tests that the result of applying op is forced even if the value is never used
            2| builtins.foldl' (_: f: f null) null [
             |                     ^
            3|   (_: throw "Not the final value, but is still forced!")

       … from call site
         at /pwd/lang/eval-fail/foldlStrict-strict-op-application.nix:2:24:
            1| # Tests that the result of applying op is forced even if the value is never used
            2| builtins.foldl' (_: f: f null) null [
             |                        ^
            3|   (_: throw "Not the final value, but is still forced!")

       … while calling anonymous lambda
         at /pwd/lang/eval-fail/foldlStrict-strict-op-application.nix:3:4:
            2| builtins.foldl' (_: f: f null) null [
            3|   (_: throw "Not the final value, but is still forced!")
             |    ^
            4|   (_: 23)

       … while calling the 'throw' builtin
         at /pwd/lang/eval-fail/foldlStrict-strict-op-application.nix:3:7:
            2| builtins.foldl' (_: f: f null) null [
            3|   (_: throw "Not the final value, but is still forced!")
             |       ^
            4|   (_: 23)

       error: Not the final value, but is still forced!
